# vortex.modules.builtin.tasklists

./: CMakeLists.txt  README.md  main.cpp  module.json
src/: module.cpp  module.h
src/instances/tasklistInstance/: TasklistRenderInstance.cpp  TasklistRenderInstance.h
src/instances/tasklistInstance/wins/: UI_MainSettings.cpp
